added styles to css/styles.css for last line of paragraph with class 'copyright'.

--- a/css/styles.css
+++ b/css/styles.css
@@ -25,3 +25,13 @@ h1 {
   padding: 5px;
   border: 2px solid green;
 }
+
+.copyright {
+  background-color: darkslateblue;
+  font-size: larger;
+  font-style: oblique;
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  text-align: center;
+  padding: 4px;
+  margin: 0%;
+}
